<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>rsa_demo</artifactId>
    <version>1.0-SNAPSHOT</version>

    <dependencies>

        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>


    </dependencies>

    <repositories>
        <repository>
            <id>mvnrepo</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

<!--    <pluginRepositories>-->

<!--        <pluginRepository>-->
<!--            <id>pluginRepo</id>-->
<!--            <url>https://repo.maven.apache.org/maven2/org/apache/maven/plugins/</url>-->
<!--        </pluginRepository>-->
<!--    </pluginRepositories>-->


    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-failsafe-plugin</artifactId>-->
<!--                <version>3.2.5</version>-->
<!--                <configuration>-->
<!--                    <argLine>-->
<!--                        &#45;&#45;illegal-access=permit-->
<!--                    </argLine>-->
<!--                </configuration>-->
<!--            </plugin>-->
        </plugins>
    </build>

</project>